--- a/listado.html
+++ b/listado.html
@@ -46,6 +46,10 @@
         // Al subir al servidor, deberá utilizarse la siguiente ruta. USUARIO debe ser reemplazado por el nombre de usuario de Pythonanywhere
         //const URL = "https://USUARIO.pythonanywhere.com/"
         
+        function formatearPrecioMoneda(precio) {
+            return new Intl.NumberFormat('es-AR', { style: 'currency', currency: 'ARS' }).format(precio);
+            // Ajusta 'es-AR' según el formato de moneda que desees utilizar (por ejemplo, 'es-ES' para euros).
+        }
 
         // Realizamos la solicitud GET al servidor para obtener todos los productos.
         fetch(URL + 'productos')
