--- a/listado.html
+++ b/listado.html
@@ -45,7 +45,7 @@
 
         // Al subir al servidor, deberá utilizarse la siguiente ruta. USUARIO debe ser reemplazado por el nombre de usuario de Pythonanywhere
         //const URL = "https://USUARIO.pythonanywhere.com/"
-        
+
         function formatearPrecioMoneda(precio) {
             return new Intl.NumberFormat('es-AR', { style: 'currency', currency: 'ARS' }).format(precio);
             // Ajusta 'es-AR' según el formato de moneda que desees utilizar (por ejemplo, 'es-ES' para euros).
@@ -73,7 +73,7 @@
                     fila.innerHTML = '<td>' + producto.codigo + '</td>' +
                         '<td>' + producto.descripcion + '</td>' +
                         '<td align="right">' + producto.cantidad + '</td>' +
-                        '<td align="right">' + producto.precio + '</td>' +
+                        '<td align="right">' + formatearPrecioMoneda(producto.precio) + '</td>' +
                         // Mostrar miniatura de la imagen
                         '<td><img src=https://www.pythonanywhere.com/user/GGDuplessis/files/home/GGDuplessis/mysite/static/imagenes/' + producto.imagen_url +' alt="Imagen del producto" style="width: 100px;"></td>' + '<td align="right">' + producto.proveedor + '</td>';
                         
