--- a/listado.html
+++ b/listado.html
@@ -27,7 +27,7 @@
                 <th>Código</th>
                 <th>Descripción</th>
                 <th>Cantidad</th>                
-                <th align="right">Precio</th>
+                <th align="center">Precio</th>
                 <th>Imagen</th>
                 <th align="right">Proveedor</th>
                 
