Mostar 1era parte

--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
         <h1>Ejemplos de uso de la API</h1><br>
         <table>
             <tr>
-                <td class="contenedor-centrado"><a href="altas.html">Alta de productos</a></td>
+                <td class="contenedor-centrado"><a href="./altas.html">Alta de productos</a></td>
             </tr>
             <tr>
-                <td class="contenedor-centrado "><a href="listado.html">Listado de productos</a></td>
+                <td class="contenedor-centrado "><a href="./listado.html">Listado de productos</a></td>
             </tr>
             <tr>
-                <td class="contenedor-centrado "><a href="modificaciones.html">Modificar datos de productos</a></td>
+                <td class="contenedor-centrado "><a href="./modificaciones.html">Modificar datos de productos</a></td>
             </tr>
             <tr>
-                <td class="contenedor-centrado "><a href="listadoEliminar.html">Eliminar productos</a></td>
+                <td class="contenedor-centrado "><a href="./listadoEliminar.html">Eliminar productos</a></td>
+            </tr>
+            <tr>
+                <td class="contenedor-centrado "><a href="./mostrar.html">Ver producto</a></td>
             </tr>
         </table>
 </body>
