--- a/mostrar.html
+++ b/mostrar.html
@@ -52,7 +52,7 @@
         const URL = "https://ggduplessis.pythonanywhere.com/"
 
         // Variables de estado para controlar la visibilidad y los datos
-        let codigo = '';
+        //let codigo = '';
         let mostrarDatosProducto = true;
 
         document.getElementById('form-obtener-producto').addEventListener('submit', obtenerProducto);
