--- a/mostrar.html
+++ b/mostrar.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostrar Producto 👀</title>
     <link rel="stylesheet" href="./static/css/estilos.css">
+    <!-- 
+    
     <style>
         /* Estilos adicionales para la tarjeta */
         .card {
@@ -15,12 +17,12 @@
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            max-width: 80%;
             margin: 20px auto;
         }
 
         .card img {
-            max-width: 100%;
+            max-width: 80%;
             border-radius: 10px;
         }
 
@@ -33,6 +35,8 @@
             margin: 5px 0;
         }
     </style>
+    -->
+    
 </head>
 
 <body>
@@ -41,10 +45,18 @@
             <img class="logo-nav" src="./static/imagenes/logos-nav.webp" alt="logo agencia de aprendizaje">
         </nav>
     </header>
-
+<!-- 
     <div class="logo-centrado">
         <img src="./static/imagenes/logo_Codo.jpg" alt="logo">
     </div>
+-->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>    
+    <hr style="border: 1px solid blue;">
+
     <h1>Mostrar Producto del Inventario</h1><br>
 
     <div id="app">
@@ -56,8 +68,8 @@
 
         <!-- Tarjeta para mostrar los datos del producto -->
         <div class="card" id="datos-producto">
-            <img id="imagen-actual" src="" alt="Imagen del producto">
             <h2 id="descripcion"></h2>
+            <img id="imagen-actual" src="" alt="Imagen del producto">
             <p><strong>Código:</strong> <span id="codigo-text"></span></p>
             <p><strong>Cantidad:</strong> <span id="cantidad"></span></p>
             <p><strong>Precio:</strong> <span id="precio"></span></p>
