--- a/mostrar.html
+++ b/mostrar.html
@@ -93,10 +93,10 @@
             <div class="card-content">
                 <img id="imagen-actual" src="" alt="Imagen del producto">
                 <div class="card-details">
-                    <p><strong>Código:</strong> <span id="codigo-text"></span></p>
-                    <p><strong>Cantidad:</strong> <span id="cantidad"></span></p>
+                    <p class="hidden"><strong>Código:</strong> <span id="codigo-text"></span></p>
+                    <p><strong>En Stock:</strong> <span id="cantidad"></span></p>
                     <p><strong>Precio:</strong> <span id="precio"></span></p>
-                    <p><strong>Proveedor:</strong> <span id="proveedor"></span></p>
+                    <p class="hidden"><strong>Proveedor:</strong> <span id="proveedor"></span></p>
                 </div>
             </div>
         </div>
