cambio a metodo template literals para poder colocar la formula dentro

--- a/listado.html
+++ b/listado.html
@@ -66,14 +66,16 @@
 
                 // Iteramos sobre cada producto y agregamos filas a la tabla
                 for (let producto of data) {
-                    let fila = document.createElement('tr'); //Crea una nueva fila de tabla (<tr>) para cada producto.
-                    fila.innerHTML = '<td>' + producto.codigo + '</td>' +
-                        '<td>' + producto.descripcion + '</td>' +
-                        '<td align="right">' + producto.cantidad + '</td>' +
-                        '<td align="right">' + formatearPrecioMoneda(producto.precio) + '</td>' +
-                        // Mostrar miniatura de la imagen
-                        '<td><img src=https://www.pythonanywhere.com/user/GGDuplessis/files/home/GGDuplessis/mysite/static/imagenes/' + producto.imagen_url +' alt="Imagen del producto" style="width: 100px;"></td>' + '<td align="right">' + producto.proveedor + '</td>';
-                    
+                    let fila = document.createElement('tr'); //Crea una nueva fila de tabla (<tr>) para cada producto.     
+                        fila.innerHTML = `
+                        <td>${producto.codigo}</td>
+                        <td>${producto.descripcion}</td>
+                        <td align="right" class="${producto.cantidad <= 0 ? 'cantidad-cero-negativa' : ''}">${producto.cantidad}</td>
+                        <td align="right">${formatearPrecioMoneda(producto.precio)}</td>
+                        <td><img src="https://www.pythonanywhere.com/user/GGDuplessis/files/home/GGDuplessis/mysite/static/imagenes/${producto.imagen_url}" alt="Imagen del producto" style="width: 100px;"></td>
+                        <td align="right">${producto.proveedor}</td>
+                    `;
+
                     //Una vez que se crea la fila con el contenido del producto, se agrega a la tabla utilizando el método appendChild del elemento tablaProductos.
                     tablaProductos.appendChild(fila);
                 }
