--- a/modificaciones.html
+++ b/modificaciones.html
@@ -57,6 +57,10 @@
                 <label for="proveModificar">Proveedor:</label>
                 <input type="number" id="proveModificar" required><br>
 
+                <br>
+                <label for="caracteModificar">Caracteristicas:</label>
+                <input type="text" id="caracteModificar" required><br>
+
                 <button type="submit">Guardar Cambios</button>
                 <a href="modificaciones.html">Cancelar</a>
             </form>
@@ -75,6 +79,7 @@
         let cantidad = '';
         let precio = '';
         let proveedor = '';
+        let caracteristicas = '';
         let imagen_url = '';
         let imagenSeleccionada = null;
         let imagenUrlTemp = null;
@@ -117,6 +122,7 @@
                 document.getElementById('cantidadModificar').value = cantidad;
                 document.getElementById('precioModificar').value = precio;
                 document.getElementById('proveModificar').value = proveedor;
+                document.getElementById('caracteModificar').value = caracteristicas;
 
                 const imagenActual = document.getElementById('imagen-actual');
                 if (imagen_url && !imagenSeleccionada) { // Verifica si imagen_url no está vacía y no se ha seleccionado una imagen
@@ -158,6 +164,7 @@
             formData.append('cantidad', document.getElementById('cantidadModificar').value);
             formData.append('proveedor', document.getElementById('proveModificar').value);
             formData.append('precio', document.getElementById('precioModificar').value);
+            formData.append('caracteristicas', document.getElementById('caracteModificar').value);
 
             // Si se ha seleccionado una imagen nueva, la añade al formData. 
             if (imagenSeleccionada) {
@@ -193,6 +200,7 @@
             document.getElementById('precioModificar').value = '';
             document.getElementById('proveModificar').value = '';
             document.getElementById('nuevaImagen').value = '';
+            document.getElementById('caracteModificar').value = '';
 
             const imagenActual = document.getElementById('imagen-actual');
             imagenActual.style.display = 'none';
@@ -205,6 +213,7 @@
             cantidad = '';
             precio = '';
             proveedor = '';
+            caracteristicas = '';
             imagen_url = '';
             imagenSeleccionada = null;
             imagenUrlTemp = null;
