--- a/mostrar.html
+++ b/mostrar.html
@@ -42,7 +42,7 @@
                     <p class="hidden"><strong>Código:</strong> <span id="codigo-text"></span></p>
                     <p><strong>En Stock:</strong> <span id="cantidad"></span></p>
                     <p><strong>Precio:</strong> <span id="precio"></span></p>
-                    <p><strong>Caracteristicas:</strong></p>
+                    <p><strong>Caracteristicas:</strong><span id="caracteristicas"></span></p>
                     <p class="hidden"><strong>Proveedor:</strong> <span id="proveedor"></span></p>
                 </div>
             </div>
@@ -84,6 +84,7 @@
             document.getElementById('cantidad').textContent = producto.cantidad;
             document.getElementById('precio').textContent = formatearPrecioMoneda(producto.precio);
             document.getElementById('proveedor').textContent = producto.proveedor;
+            document.getElementById('caracteristicas').textContent = producto.caracteristicas;
 
             const imagenActual = document.getElementById('imagen-actual');
             if (producto.imagen_url) {
