modificacion app.py con caracteristicas en las funciones

--- a/listado.html
+++ b/listado.html
@@ -30,7 +30,7 @@
                 <th align="center">Precio</th>
                 <th>Imagen</th>
                 <th align="right">Proveedor</th>
-                <th  class="hidden">Características</th> <!-- Nueva columna -->
+                <th>Características</th> <!-- Nueva columna -->
                 
             </tr>
         </thead>
