correccion error modificaciones

--- a/modificaciones.html
+++ b/modificaciones.html
@@ -106,6 +106,7 @@
                     cantidad = data.cantidad;
                     precio = data.precio;
                     proveedor = data.proveedor;
+                    caracteristicas = data.caracteristicas;
                     imagen_url = data.imagen_url;
                     mostrarDatosProducto = true; //Activa la vista del segundo formulario
                     mostrarFormulario();
