--- a/modificaciones.html
+++ b/modificaciones.html
@@ -59,7 +59,7 @@
 
                 <br>
                 <label for="caracteModificar">Caracteristicas:</label>
-                <input type="text" id="caracteModificar" required><br>
+                <input type="text" id="caracteModificar"><br>
 
                 <button type="submit">Guardar Cambios</button>
                 <a href="modificaciones.html">Cancelar</a>
@@ -69,9 +69,6 @@
 
     <script>
         const URL = "https://ggduplessis.pythonanywhere.com/"
-
-        //Al subir al servidor, deberá utilizarse la siguiente ruta. USUARIO debe ser reemplazado por el nombre de usuario de Pythonanywhere
-        //const URL = "https://USUARIO.pythonanywhere.com/"
 
         // Variables de estado para controlar la visibilidad y los datos del formulario
         let codigo = '';
