--- a/altas.html
+++ b/altas.html
@@ -24,7 +24,7 @@
     <!--enctype="multipart/form-data" es necesario para enviar archivos al back.-->
     <form id="formulario" enctype="multipart/form-data">
         
-        <label for="descripcion">Descripción:</label>
+        <label for="descripcion">Descripción1:</label>
         <input type="text" id="descripcion" name="descripcion" required><br>
 
         <label for="cantidad">Cantidad:</label>
