--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo de uso de la API 🚀</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="./static/imagenes/favicon.ico" />
+
+    <title>GESTOCK</title>
     <link rel="stylesheet" href="./static/css/estilos.css">
 </head>
 
@@ -21,7 +25,7 @@
         <div class="logo-centrado">
             <img src="./static/imagenes/2802512950-th.png" alt="logo">
         </div>
-        <h1>Ejemplos de uso de la API</h1><br>
+        <h1>Gestión de STOCK</h1><br>
         <table>
             <tr>
                 <td class="contenedor-centrado"><a href="./altas.html">Alta de productos</a></td>
