--- a/altas.html
+++ b/altas.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar producto 🚀</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="./static/imagenes/favicon1.ico" />
+
+    <title>Nuevo ✔</title>
     <link rel="stylesheet" href="./static/css/estilos.css">
 </head>
 
@@ -24,7 +28,7 @@
     <!--enctype="multipart/form-data" es necesario para enviar archivos al back.-->
     <form id="formulario" enctype="multipart/form-data">
         
-        <label for="descripcion">Descripción1:</label>
+        <label for="descripcion">Descripción:</label>
         <input type="text" id="descripcion" name="descripcion" required><br>
 
         <label for="cantidad">Cantidad:</label>
