--- a/listadoEliminar.html
+++ b/listadoEliminar.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eliminar Productos 🚀</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="./static/imagenes/favicon(d).ico" />
+
+    <title>Eliminar ❌</title>
     <link rel="stylesheet" href="./static/css/estilos.css">
 </head>
 
