--- a/mostrar.html
+++ b/mostrar.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Favicon -->
+    <link rel="icon" href="./static/imagenes/favicon(r).ico" />
+
     <title>Mostrar Producto 👀</title>
     <link rel="stylesheet" href="./static/css/estilos.css">
        
