--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
     <header>
         <nav class="navbar-index ">
-            <img class="logo-nav" src="./static/imagenes/logos-nav.webp" alt="logo agencia de aprendizaje">
+            <img class="logo-nav" src="./static/imagenes/gst.png" alt="logo agencia de aprendizaje">
         </nav>
     </header>
 
 
     <div>
         <div class="logo-centrado">
-            <img src="./static/imagenes/2802512950-th.png" alt="logo">
+            
         </div>
         <h1>Gestión de STOCK</h1><br>
         <table>
