--- a/modificaciones.html
+++ b/modificaciones.html
@@ -16,12 +16,12 @@
 <body>
     <header>
         <nav class="navbar-index ">
-            <img class="logo-nav" src="./static/imagenes/logos-nav.webp" alt="logo agencia de aprendizaje">
+            <img class="logo-nav" src="./static/imagenes/gst.png" alt="logo agencia de aprendizaje">
         </nav>
     </header>
 
     <div class="logo-centrado">
-        <img src="./static/imagenes/logo_Codo.jpg" alt="logo">
+        
     </div>
     <h1>Modificar Productos del Inventario</h1><br>
 
