--- a/mostrar.html
+++ b/mostrar.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="navbar-index">
-            <img class="logo-nav" src="./static/imagenes/logos-nav.webp" alt="logo agencia de aprendizaje">
+            <img class="logo-nav" src="./static/imagenes/gst.png" alt="logo agencia de aprendizaje">
         </nav>
     </header>
 
