--- a/listadoEliminar.html
+++ b/listadoEliminar.html
@@ -16,7 +16,16 @@
 <body>
     <header>
         <nav class="navbar-index">
-            <img class="logo-nav" src="./static/imagenes/gst.png" alt="logo agencia de aprendizaje">
+            <a href="./" class="logo-nav"><img class="logo-nav" src="./static/imagenes/gst.png" alt="logo agencia de aprendizaje"></a>
+            <a href="" class="boton-nav">Ajuste Inventario</a>
+            <a href="" class="boton-nav">Picking</a>
+            <a href="" class="boton-nav">Ordenes de entrega</a>
+            <a href="" class="boton-nav">Ordenes de compra</a>
+            <hr style="border: 3px solid #ffffff;">
+            <a href="" class="boton-nav">Proveedores</a>
+            <a href="" class="boton-nav">Clientes</a>
+            <hr style="border: 3px solid #ffffff;">
+            <a href="" class="boton-config">⚙</a>
         </nav>
     </header>
 
