--- a/listado.html
+++ b/listado.html
@@ -43,7 +43,7 @@
                 <th align="center">Precio</th>
                 <th>Imagen</th>
                 <th align="right">Proveedor</th>
-                <th>Características</th> <!-- Nueva columna -->
+                <th class="hidden">Características</th> <!-- Nueva columna -->
                 
             </tr>
         </thead>
@@ -88,7 +88,7 @@
                         <td align="right">${formatearPrecioMoneda(producto.precio)}</td>
                         <td><img src="https://www.pythonanywhere.com/user/GGDuplessis/files/home/GGDuplessis/mysite/static/imagenes/${producto.imagen_url}" alt="Imagen del producto" style="width: 100px;"></td>
                         <td align="right">${producto.proveedor}</td>
-                        <td>${producto.caracteristicas}</td> <!-- Mostrar las características -->
+                        <!--<td>${producto.caracteristicas}</td>  Mostrar las características -->
                     `;
 
                     //Una vez que se crea la fila con el contenido del producto, se agrega a la tabla utilizando el método appendChild del elemento tablaProductos.
